--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </form>
 
     <script>
-        const socket = new WebSocket("ws://127.0.0.1:5555");
+        const socket = new WebSocket("PUT YOUR IP AND YOUR PORT HERE"); //PUT YOU ID AND PORT HERE
         let userName = prompt("Enter your name to start chatting:");
 
         // Sende den Benutzernamen an den Server, wenn die Verbindung hergestellt wird
