--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </form>
 
     <script>
-        const socket = new WebSocket("ws://127.0.0.1:5555");// verbindet mit server
+        const socket = new WebSocket("");// verbindet mit server add your ip and ws// here
         let userName = prompt("Enter your name to start chatting:");//username abfrage
 
         document.getElementById("sendButton").onclick = function () { //funktion wenn man auf Senden drückt
